
    New behaviour: xml::node::set_namespace() now sets the namespace for all
    node children when the node hadn't had any namespace before too, instead
    of only doing it when the node namespace is being changed.

    Improve error reporting again by including more details. This changes the
    error messages format compared to the previous versions.

Version 0.9.1 [2020-11-01]

    Added return value for xml::init methods setting various boolean flags:
    they now return the previous state of the flag. Also add
    xml::init::change_flag helper to facilitate temporarily changing some
    global flag.

    Remove all dependencies on Boost to simplify using the library.

    Fix compilation with C++17 (and even C++20) compilers.

    Support building Win32 DLLs without relying on auto-import.

Version 0.9.0 [2018-04-08]

    Slight behaviour change: always use UTF-8, not ISO-8859-1, as default
    encoding. This was already the case before, but calling get_encoding()
    (not "set"!) changed the default to ISO-8859-1 as a side effect and this
    is not done any longer.

    Added xml::relaxng class for validating XML documents using RelaxNG.

Version 0.8.1 [2016-12-11]

    Add cpp11.h file missing from 0.8.0 distribution archive.

Version 0.8.0 [2016-11-29]

    New behaviour: xml::document::save_to_{string,file}() now throws exception
    in case of failure by default instead of silently ignoring any errors.

    New behaviour: xpath_context::evaluate() also throws an exception if an
    invalid XPath expression is specified.

    In both cases, "ignore_errors" can be passed as the new "on_error" argument
    to these functions to restore the old behaviour (this is, however, not
    recommended).

    Added xml::node::move_under().
    Added xml::node::set_namespace().
    Added xml::xpath_context class for evaluating XPath expressions.
    Added xml::nodes_view::erase() analogous to node::erase().

Version 0.7.1 [2013-08-28]
